--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <input type="password" id="password" name="password" placeholder="Password" />
                 <div id="loginStatus"></div>
                 <a href="#">Forgot your password?</a>
-                <input class="btnSubmit" type="submit" value="Login">
+                <input class="btnSubmit btnshine" type="submit" value="Login">
             </form>
         </div>
         <div class="overlay-container">
