--- a/user.html
+++ b/user.html
@@ -75,11 +75,13 @@
                     <table class="table">
                         <thead>
                             <tr>
-                                <th scope="col">#</th>
-                                <th scope="col">Username</th>
-                                <th scope="col">First Name</th>
-                                <th scope="col">Last Name</th>
-                                <th scope="col">Email</th>
+                                <th class="fs16" scope="col">#</th>
+                                <th class="fs16" scope="col">Username</th>
+                                <th class="fs16" scope="col">First Name</th>
+                                <th class="fs16" scope="col">Last Name</th>
+                                <th class="fs16" scope="col">Email</th>
+                                <th class="fs16" scope="col">Edit</th>
+                                <th class="fs16" scope="col">Del</th>
                             </tr>
                         </thead>
                         <tbody id="user-table-body">
