--- a/product.html
+++ b/product.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="message">
-            <div id="toggleMode"><img src="img/arrow-repeat.svg" class="icn" alt=""></div>
+            <div id="toggleMode"><img  src="img/arrow-repeat.svg" class="icn" alt=""></div>
             <div id="uName"></div>
         </div>
 
@@ -69,7 +69,7 @@
         <div class="main">
             <div class="report-container">
                 <div class="report-header">
-                    <h1 class="recent-Articles">User</h1>
+                    <h1 class="recent-Articles">Products</h1>
                 </div>
 
                 <div class="table-responsive">
