--- a/user.html
+++ b/user.html
@@ -88,6 +88,19 @@
                         <tbody id="user-table-body">
                         </tbody>
                     </table>
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination justify-content-center">
+                            <li class="page-item page-button disabled" id="previous-page">
+                                <a class="page-link" href="#" tabindex="-1">Previous</a>
+                            </li>
+                          <li class="page-item page-button"><a class="page-link" href="#">1</a></li>
+                          <li class="page-item page-button"><a class="page-link" href="#">2</a></li>
+                          <li class="page-item page-button"><a class="page-link" href="#">3</a></li>
+                          <li class="page-item page-button" id="next-page">
+                            <a class="page-link" href="#">Next</a>
+                        </li>
+                        </ul>
+                      </nav>
                 </div>
 
             </div>
