--- a/user.html
+++ b/user.html
@@ -91,11 +91,10 @@
                     <nav aria-label="Page navigation example">
                         <ul class="pagination pagination-lg justify-content-center">
                             <li class="page-item" id="previous-page">
-                                <a class="page-link" href="#" tabindex="-1">Previous</a>
+                                <a class="page-link" href="#" tabindex="-1">1</a>
                             </li>
-                            <!-- Individual page buttons will be added here dynamically -->
                             <li class="page-item" id="next-page">
-                                <a class="page-link" href="#">Next</a>
+                                <a class="page-link" href="#">2</a>
                             </li>
                         </ul>
                     </nav>                 
