8/15/23: add page list model

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
     </script>
     <script>
         AOS.init();
+        var isLogged = localStorage.getItem('isLogged');
+        if(isLogged == 1){
+            window.location.href = 'user.html';
+        }
     </script>
 </body>
 
