--- a/user.html
+++ b/user.html
@@ -70,9 +70,15 @@
             <div class="report-container">
                 <div class="report-header">
                     <h1 class="recent-Articles">User</h1>
+                    <div>
+                    <button id="add-user-button" class="btn btn-primary">Add User</button>
+                    </div>
                 </div>
 
+                 
+
                 <div class="table-responsive">
+                    
                     <table class="table">
                         <thead>
                             <tr>
@@ -85,16 +91,18 @@
                                 <th class="fs16" scope="col">Del</th>
                             </tr>
                         </thead>
+
                         <tbody id="user-table-body">
                         </tbody>
                     </table>
                     <nav aria-label="Page navigation example">
                         <ul class="pagination pagination-lg justify-content-center">
                             <li class="page-item" id="previous-page">
-                                <a class="page-link" href="#" tabindex="-1">1</a>
+                                <a class="page-link" href="#" tabindex="-1">Previous</a>
                             </li>
+                            <!-- Individual page buttons will be added here dynamically -->
                             <li class="page-item" id="next-page">
-                                <a class="page-link" href="#">2</a>
+                                <a class="page-link" href="#">Next</a>
                             </li>
                         </ul>
                     </nav>                 
