--- a/pages/users/user.html
+++ b/pages/users/user.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width,
 				initial-scale=1.0">
     <title>Tieu luan lap trinh mang</title>
-    <link rel="stylesheet" href="/css/common.css">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/aos.css">
-    <link rel="stylesheet" href="/css/user.css">
+    <link rel="stylesheet" href="../../css/common.css">
+    <link rel="stylesheet" href="../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../css/aos.css">
+    <link rel="stylesheet" href="../../css/user.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
@@ -102,11 +102,11 @@
             </div>
         </div>
     </div>
-    <script src="/js/jquery-3.7.0.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/settings.js"></script>
-    <script src="/js/api.js"></script>
-    <script src="/js/aos.js"></script>
+    <script src="../../js/jquery-3.7.0.js"></script>
+    <script src="../../js/bootstrap.min.js"></script>
+    <script src="../../js/settings.js"></script>
+    <script src="../../js/api.js"></script>
+    <script src="../../js/aos.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
     <script>
         WebFont.load({
