--- a/pages/roboModel/roboModel-edit.html
+++ b/pages/roboModel/roboModel-edit.html
@@ -460,7 +460,7 @@
                             console.log(data);
                             if(data == 1){
                                 alert('Update successfully');
-                                history.back();
+                                window.location.reload(history.back());
                                 
                             }
                         },
