--- a/pages/products/product.html
+++ b/pages/products/product.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../../css/aos.css">
     <link rel="stylesheet" href="../../css/user.css">
     <link rel="stylesheet" href="../../css/style-product.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
@@ -101,9 +102,6 @@
                         </ul>
                     </nav>                 
                 </div>
-
-     
-
             </div>
         </div>
     </div>
@@ -112,6 +110,7 @@
     <script src="../../js/settings.js"></script>
     <script src="../../js/productapi.js"></script>
     <script src="../../js/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
     <script>
         WebFont.load({
