--- a/pages/users/user.html
+++ b/pages/users/user.html
@@ -80,6 +80,7 @@
                                 <th class="fs16" scope="col">First Name</th>
                                 <th class="fs16" scope="col">Last Name</th>
                                 <th class="fs16" scope="col">Email</th>
+                                <th class="fs16" scope="col">Password</th>
                                 <th class="fs16" scope="col">Edit</th>
                                 <th class="fs16" scope="col">Del</th>
                             </tr>
