--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
     <script src="js/jquery-3.7.0.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/settings.js"></script>
-    <script src="js/api.js"></script>
+    <!-- <script src="js/api.js"></script> -->
     <script src="js/aos.js"></script>
+    <script src="js/index.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
     <script>
         WebFont.load({
@@ -72,8 +73,6 @@
 
             if(isAdmin){
                 window.location.href = './pages/users/user.html';
-            }else{
-                window.location.href = './pages/roboModel/roboModel.html';
             }
         }
     </script>
