--- a/pages/roboModel/roboModel-detail.html
+++ b/pages/roboModel/roboModel-detail.html
@@ -463,6 +463,7 @@
 
       function logOut() {
         localStorage.removeItem("accessToken");
+		localStorage.removeItem('infoUser');
         localStorage.setItem("isLogged", 0);
         window.location.href = "../../index.html";
       }
