--- a/pages/roboModel/roboModel.html
+++ b/pages/roboModel/roboModel.html
@@ -342,6 +342,7 @@
 			
 			function logOut(){
 				localStorage.removeItem('accessToken');
+				localStorage.removeItem('infoUser');
 				localStorage.setItem('isLogged',0);
 				window.location.href = '../../index.html';
 			}
