--- a/pages/users/user.html
+++ b/pages/users/user.html
@@ -75,7 +75,7 @@
                     <table class="table">
                         <thead>
                             <tr>
-                                <th class="fs16" scope="col">#</th>
+                                <th class="fs16" scope="col">UserID</th>
                                 <th class="fs16" scope="col">Username</th>
                                 <th class="fs16" scope="col">First Name</th>
                                 <th class="fs16" scope="col">Last Name</th>
