--- a/pages/users/user.html
+++ b/pages/users/user.html
@@ -66,21 +66,19 @@
             <div class="report-container">
                 <div class="report-header">
                     <h1 class="recent-Articles">User</h1>
-                    <div>
-                    <button id="add-user-button" class="btn btn-primary">Add User</button>
-                    </div>
+                        <button id="add-user-button" class="btn btn-primary">Add User</button>
                 </div>
                 <div class="table-responsive">
-                    
                     <table class="table">
                         <thead>
                             <tr>
-                                <th class="fs16" scope="col">UserID</th>
+                                <th class="fs16" scope="col">#</th>
                                 <th class="fs16" scope="col">Username</th>
                                 <th class="fs16" scope="col">First Name</th>
                                 <th class="fs16" scope="col">Last Name</th>
                                 <th class="fs16" scope="col">Email</th>
                                 <th class="fs16" scope="col">Password</th>
+                                <th class="fs16" scope="col">Deleted</th>
                                 <th class="fs16" scope="col">Edit</th>
                                 <th class="fs16" scope="col">Del</th>
                             </tr>
