--- a/pages/404.html
+++ b/pages/404.html
@@ -43,40 +43,6 @@
 			href="vendors/styles/icon-font.min.css"
 		/>
 		<link rel="stylesheet" type="text/css" href="../vendors/styles/style.css" />
-
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script
-			async
-			src="https://www.googletagmanager.com/gtag/js?id=G-GBZ3SGGX85"
-		></script>
-		<script
-			async
-			src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2973766580778258"
-			crossorigin="anonymous"
-		></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag() {
-				dataLayer.push(arguments);
-			}
-			gtag("js", new Date());
-
-			gtag("config", "G-GBZ3SGGX85");
-		</script>
-		<!-- Google Tag Manager -->
-		<script>
-			(function (w, d, s, l, i) {
-				w[l] = w[l] || [];
-				w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-				var f = d.getElementsByTagName(s)[0],
-					j = d.createElement(s),
-					dl = l != "dataLayer" ? "&l=" + l : "";
-				j.async = true;
-				j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-				f.parentNode.insertBefore(j, f);
-			})(window, document, "script", "dataLayer", "GTM-NXZMQSS");
-		</script>
-		<!-- End Google Tag Manager -->
 	</head>
 	<body>
 		<div
@@ -91,7 +57,7 @@
 						check the URL
 					</p>
 					<div class="pt-20 mx-auto max-width-200">
-						<a href="/index.html" class="btn btn-primary btn-block btn-lg"
+						<a href="#" class="btn btn-primary btn-block btn-lg btn-backHome"
 							>Back To Home</a
 						>
 					</div>
@@ -103,15 +69,23 @@
 		<script src="../vendors/scripts/script.min.js"></script>
 		<script src="../vendors/scripts/process.js"></script>
 		<script src="../vendors/scripts/layout-settings.js"></script>
-		<!-- Google Tag Manager (noscript) -->
-		<noscript
-			><iframe
-				src="https://www.googletagmanager.com/ns.html?id=GTM-NXZMQSS"
-				height="0"
-				width="0"
-				style="display: none; visibility: hidden"
-			></iframe
-		></noscript>
-		<!-- End Google Tag Manager (noscript) -->
+		<script type="text/javascript">
+			function handleBackHome(){
+				var isLogged = localStorage.getItem('isLogged');
+				var isAdmin = localStorage.getItem('isAdmin');
+				if(isLogged == 1){
+
+					if(isAdmin){
+						window.location.href = './pages/users/user.html';
+					}else{
+						window.location.href = './pages/roboModel/roboModel.html';
+					}
+				}else{
+					window.location.href ="/index.html";
+				}
+			}
+
+			$(".btn-backHome").on('click', handleBackHome);
+		</script>
 	</body>
 </html>
