update image not found

--- a/pages/products/product.html
+++ b/pages/products/product.html
@@ -84,6 +84,7 @@
                                 <th class="fs16" scope="col">Type Name</th>
                                 <th class="fs16" scope="col">User ID</th>
                                 <th class="fs16" scope="col">Created Day</th>
+                                <th class="fs16" scope="col">Deleted</th>
                                 <th class="fs16" scope="col">Edit</th>
                                 <th class="fs16" scope="col">Del</th>
                             </tr>
