add search, sort product

--- a/pages/products/product.html
+++ b/pages/products/product.html
@@ -69,8 +69,21 @@
             <div class="report-container">
                 <div class="report-header">
                     <h1 class="recent-Articles">Products</h1>
-                    <div>
-                        <button id="add-product-button" class="btn btn-primary">Add Product</button>
+                    <div class="d-flex">
+                        <div class="row pl20">
+                            <img id="sortAscButton" class="btn" src="../../img/sort-alpha-down.svg" alt="">
+                        </div>
+                        <div class="row pl20">
+                            <img id="sortDescButton" class="btn" src="../../img/sort-alpha-up-alt.svg" alt="">
+                        </div>
+                        <div class="row pl20">
+                            <div class="search-container">
+                                <input type="text" class="form-control" id="searchInput" placeholder="Enter keyword">
+                            </div>
+                        </div>
+                        <div class="row pl20">
+                            <button id="add-user-button" class="btn btn-primary">Add User</button>
+                        </div>
                     </div>                    
                 </div>
 
