fix button add product

--- a/pages/products/product.html
+++ b/pages/products/product.html
@@ -82,7 +82,7 @@
                             </div>
                         </div>
                         <div class="row pl20">
-                            <button id="add-user-button" class="btn btn-primary">Add User</button>
+                            <button id="add-product-button" class="btn btn-primary">Add Product</button>
                         </div>
                     </div>                    
                 </div>
