--- a/pages/404.html
+++ b/pages/404.html
@@ -3,7 +3,8 @@
 	<head>
 		<!-- Basic Page Info -->
 		<meta charset="utf-8" />
-		<title>LTM Tieu Luan</title>
+		<title>Tieu luan lap trinh mang</title>
+		<link rel="icon" type="image/x-icon" href="../img/favicon.ico">
 
 		<!-- Site favicon -->
 		<link
