Add sortList model of user

--- a/pages/404.html
+++ b/pages/404.html
@@ -77,9 +77,9 @@
 				if(isLogged == 1){
 
 					if(isAdmin){
-						window.location.href = './pages/users/user.html';
+						window.location.href = './users/user.html';
 					}else{
-						window.location.href = './pages/roboModel/roboModel.html';
+						window.location.href = './roboModel/roboModel.html';
 					}
 				}else{
 					window.location.href ="/index.html";
