--- a/pages/roboModel/roboModel.html
+++ b/pages/roboModel/roboModel.html
@@ -190,10 +190,28 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-md-12 col-sm-12">
-                <a href="./roboModel-create.html" class="btn btn-info"
+              <div class="col-md-6 col-sm-12">
+                  <a href="./roboModel-create.html" class="btn btn-info"
                   >Create new model</a
                 >
+              </div>
+              <div class="col-md-6 col-sm-12">
+                <div class="row justify-content-end">
+                  <div class="col-md-4 col-sm-8">
+                    <select class="custom-select" id="selectSort">
+                      <option value="-1" selected>Sort by...</option>
+                      <option value="1">Model Name</option>
+                      <option value="2">Type Name</option>
+                      <option value="3">Create Date</option>
+                    </select>         
+                  </div>
+                  <div class="col-md-3 col-sm-6">                   
+                    <select class="custom-select" id="selectOrderBy">
+                      <option value="0" selected>ASC</option>
+                      <option value="1">DESC</option>
+                    </select>           
+                  </div>
+                </div>                                  
               </div>
             </div>
           </div>
